--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <header>
     </header>
+
+    <container>
     <div class="card first" style="width: 18rem; background-color: aliceblue;">
         
         <div class="card-body">
@@ -62,8 +64,9 @@
             <button class="btn btn-primary" type="submit">Submit</button>
         </div>
       </div>
+    </container>
 <! new task cards -->
-
+<container>
 <div class="row">
   <div class="col-sm-3">
     <div class="card">
@@ -304,6 +307,7 @@
       </div>
     </div>
   </div>
+</container>
    
 </body>
 </html>
