--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
     </header>
 
-    <container>
+    <div class='container'>
     <div class="card first" style="width: 18rem; background-color: aliceblue;">
         
         <div class="card-body">
@@ -64,9 +64,9 @@
             <button class="btn btn-primary" type="submit">Submit</button>
         </div>
       </div>
-    </container>
+    </div>
 <! new task cards -->
-<container>
+<div class='container'>
 <div class="row">
   <div class="col-sm-3">
     <div class="card">
@@ -307,7 +307,7 @@
       </div>
     </div>
   </div>
-</container>
+</div>
    
 </body>
 </html>
