--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta name=“viewport” content=“width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- CSS only -->
-  <script src='../practice-repo/JavaScript/index.js'></script>
-  <script src='../practice-repo/JavaScript/taskmanager.js'></script>
+  <script src='JavaScript/index.js'></script>
+  <script src='JavaScript/taskmanager.js'></script>
+
+
 
   <link rel="stylesheet" href="index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
